index.html / main.css 수정 review_log 파트
review_block on/off 스크립트 추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="js/review_view_on.js"></script>
+
     <title>ReviewBoard</title>
 </head>
 
@@ -51,11 +54,157 @@
             </div>
             <div class="board_form">
                 <div class="review_log"> <!-- 후기 1개 -->
-
+                    <div class="review_block">
+                        <div class="U_name">
+                            강**
+                        </div>
+                        <div class="review_contents">
+                            <p class="L_name">
+                                1인미디어콘텐츠창작자
+                            </p>
+                            <p class="board_RV_title">
+                                수강후기 제목
+                            </p>
+                        </div>
+                        <div class="under_arrow"></div>
+                    </div>
+                    <div class="review_place">
+                        <p class="review_sub">
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                        </p>
+                    </div>
+                </div>
+                <div class="review_log"> <!-- 후기 1개 -->
+                    <div class="review_block">
+                        <div class="U_name">
+                            강**
+                        </div>
+                        <div class="review_contents">
+                            <p class="L_name">
+                                1인미디어콘텐츠창작자
+                            </p>
+                            <p class="board_RV_title">
+                                수강후기 제목
+                            </p>
+                        </div>
+                        <div class="under_arrow"></div>
+                    </div>
+                    <div class="review_place">
+                        <p class="review_sub">
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                        </p>
+                    </div>
+                </div>
+                <div class="review_log"> <!-- 후기 1개 -->
+                    <div class="review_block">
+                        <div class="U_name">
+                            강**
+                        </div>
+                        <div class="review_contents">
+                            <p class="L_name">
+                                1인미디어콘텐츠창작자
+                            </p>
+                            <p class="board_RV_title">
+                                수강후기 제목
+                            </p>
+                        </div>
+                        <div class="under_arrow"></div>
+                    </div>
+                    <div class="review_place">
+                        <p class="review_sub">
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                        </p>
+                    </div>
+                </div>
+                <div class="review_log"> <!-- 후기 1개 -->
+                    <div class="review_block">
+                        <div class="U_name">
+                            강**
+                        </div>
+                        <div class="review_contents">
+                            <p class="L_name">
+                                1인미디어콘텐츠창작자
+                            </p>
+                            <p class="board_RV_title">
+                                수강후기 제목
+                            </p>
+                        </div>
+                        <div class="under_arrow"></div>
+                    </div>
+                    <div class="review_place">
+                        <p class="review_sub">
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                        </p>
+                    </div>
+                </div>
+                <div class="review_log"> <!-- 후기 1개 -->
+                    <div class="review_block">
+                        <div class="U_name">
+                            강**
+                        </div>
+                        <div class="review_contents">
+                            <p class="L_name">
+                                1인미디어콘텐츠창작자
+                            </p>
+                            <p class="board_RV_title">
+                                수강후기 제목
+                            </p>
+                        </div>
+                        <div class="under_arrow"></div>
+                    </div>
+                    <div class="review_place">
+                        <p class="review_sub">
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br><br>
+                        </p>
+                    </div>
+                </div>
+                <div class="review_log"> <!-- 후기 1개 -->
+                    <div class="review_block">
+                        <div class="U_name">
+                            강**
+                        </div>
+                        <div class="review_contents">
+                            <p class="L_name">
+                                1인미디어콘텐츠창작자
+                            </p>
+                            <p class="board_RV_title">
+                                수강후기 제목
+                            </p>
+                        </div>
+                        <div class="under_arrow"></div>
+                    </div>
+                    <div class="review_place">
+                        <p class="review_sub">
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
