--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             수강후기 내용입니다.<br><br><br>
                         </p>
                     </div>
-                </div>
+                </div> <!-- End -->
                 <div class="review_log"> <!-- 후기 1개 -->
                     <div class="review_block">
                         <div class="U_name">
@@ -102,7 +102,7 @@
                             수강후기 내용입니다.<br><br><br>
                         </p>
                     </div>
-                </div>
+                </div> <!-- End -->
                 <div class="review_log"> <!-- 후기 1개 -->
                     <div class="review_block">
                         <div class="U_name">
@@ -127,7 +127,7 @@
                             수강후기 내용입니다.<br><br><br>
                         </p>
                     </div>
-                </div>
+                </div> <!-- End -->
                 <div class="review_log"> <!-- 후기 1개 -->
                     <div class="review_block">
                         <div class="U_name">
@@ -152,7 +152,7 @@
                             수강후기 내용입니다.<br><br><br>
                         </p>
                     </div>
-                </div>
+                </div> <!-- End -->
                 <div class="review_log"> <!-- 후기 1개 -->
                     <div class="review_block">
                         <div class="U_name">
@@ -177,34 +177,17 @@
                             수강후기 내용입니다.<br><br><br>
                         </p>
                     </div>
-                </div>
-                <div class="review_log"> <!-- 후기 1개 -->
-                    <div class="review_block">
-                        <div class="U_name">
-                            강**
-                        </div>
-                        <div class="review_contents">
-                            <p class="L_name">
-                                1인미디어콘텐츠창작자
-                            </p>
-                            <p class="board_RV_title">
-                                수강후기 제목
-                            </p>
-                        </div>
-                        <div class="under_arrow"></div>
-                    </div>
-                    <div class="review_place">
-                        <p class="review_sub">
-                            수강후기 내용입니다.<br><br>
-                            수강후기 내용입니다.<br><br>
-                            수강후기 내용입니다.<br><br>
-                            수강후기 내용입니다.<br><br>
-                            수강후기 내용입니다.<br><br>
-                        </p>
-                    </div>
-                </div>
+                </div> <!-- End -->
             </div>
+            <p class="paging">
+                <a class="page_on" href="">1</a>
+                <a href="">2</a>
+                <a href="">3</a>
+                <a href="">4</a>
+                <a href="">5</a>
+            </p>
         </div>
+    </div>
 </body>
 
 </html>
