--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                     </div>
                     <div class="review_place">
                         <p class="review_sub">
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
                         </p>
                     </div>
                 </div> <!-- End -->
@@ -95,11 +95,11 @@
                     </div>
                     <div class="review_place">
                         <p class="review_sub">
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
                         </p>
                     </div>
                 </div> <!-- End -->
@@ -120,11 +120,11 @@
                     </div>
                     <div class="review_place">
                         <p class="review_sub">
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
                         </p>
                     </div>
                 </div> <!-- End -->
@@ -145,11 +145,11 @@
                     </div>
                     <div class="review_place">
                         <p class="review_sub">
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
                         </p>
                     </div>
                 </div> <!-- End -->
@@ -170,11 +170,11 @@
                     </div>
                     <div class="review_place">
                         <p class="review_sub">
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
-                            수강후기 내용입니다.<br><br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
+                            수강후기 내용입니다.<br><br>
                         </p>
                     </div>
                 </div> <!-- End -->
