--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
                         </select>
                     </div>
                 </div> <!-- 과정명_라인 // -->
+
+                <div class="lecture_name_line board_line"> <!-- 과정명_라인 -->
+                    <span class="line_title">
+                        수강신청할 과정
+                    </span>
+                    <div class="line_contents">
+                        <select name="lec_select_name" id="app_lec_select" class="app_lec">
+                            <option value="1인미디어콘텐츠창작자">1인미디어콘텐츠창작자</option>
+                            <option value="로스팅핸드드립마스터">로스팅핸드드립마스터</option>
+                            <option value="장애인식개선교육지도사">장애인식개선교육지도사</option>
+                        </select>
+                    </div>
+                </div> <!-- 과정명_라인 // -->
                 <div class="review_title board_line"> <!-- 제목 라인 -->
                     <span class="line_title">
                         제목
